--- a/.prettierrc
+++ b/.prettierrc
@@ -16,6 +16,6 @@
   "trailingComma": "es5",
   "useTabs": false,
   "vueIndentScriptAndStyle": false,
-  "filepath": "c:\\Users\\Home\\Documents\\projects\\ProdigyIRC\\server.js",
+  "filepath": "",
   "parser": "babel"
 }
