--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/express": "^4.17.7",
     "@types/node": "^14.0.27",
-    "@types/socket.io": "^2.1.10"
+    "@types/socket.io": "^2.1.10",
+    "typescript": "^4.8.2"
   }
 }
