--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,9 @@
 	// "lib": [],							 /* Specify library files to be included in the compilation. */
 	"allowJs": false,					   /* Allow javascript files to be compiled. */
 	"checkJs": false,					   /* Report errors in .js files. */
-	"declaration": true,				   /* Generates corresponding '.d.ts' file. */
-	"declarationMap": true,				/* Generates a sourcemap for each corresponding '.d.ts' file. */
-	"sourceMap": true,					 /* Generates corresponding '.map' file. */
+	"declaration": false,				   /* Generates corresponding '.d.ts' file. */
+	"declarationMap": false,				/* Generates a sourcemap for each corresponding '.d.ts' file. */
+	"sourceMap": false,					 /* Generates corresponding '.map' file. */
 	"outDir": "./dist/",						/* Redirect output structure to the directory. */
 	"rootDir": "./src/",					   /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
 	// "composite": true,					 /* Enable project compilation */
