--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Ingame chat for hackers in prodigy.",
   "main": "server.js",
   "scripts": {
-    "prestart": "npx tsc",
+    "prestart": "sh build.sh",
     "start": "node dist/server.js"
   },
   "repository": {
